--- a/config/param.yml
+++ b/config/param.yml
@@ -100,7 +100,7 @@ lr : [0.1, 0.01, 0.05, 0.005, 0.001]
 # amount of epochs
 epochs : 300
 # perform training (true) or prediction (false)
-lTrain : false
+lTrain : true
 # save intermediate results
 lSave : true
 # (list of) path(s) of to be predicted images
