--- a/config/param.yml
+++ b/config/param.yml
@@ -5,7 +5,7 @@ motion_head: &id001
    labelref  : [0]
    dataart   : ["t1_tse_tra_Kopf_Motion_0003"]
    labelart  : [1]
-   pathout   : "/no_backup/s1254/CNN/Headcross"
+   pathout   : "/home/wzehui/med_data/ImageSimilarity/Databases/MRPhysics/CNN/Headcross"
    bestmodel : {CNN2D: "head_4040_lr_0.0001_bs_64", CNN3D: "xxx", MNetArt: "xxx", VNetArt: "xxx"}
 #
 motion_abd: &id002
@@ -95,8 +95,8 @@ dSplitval : 0.1
 # v1.1: grid and none are the same -> automatic switching if batchSize|learningRate are arrays, then 'grid', else 'none'
 sOpti : "grid"
 # optimized parameters
-batchSize : [128]
-lr : [0.1, 0.01, 0.05, 0.005, 0.001]
+batchSize : [32]
+lr : [0.0001]
 # amount of epochs
 epochs : 300
 # perform training (true) or prediction (false)
@@ -104,7 +104,7 @@ lTrain : true
 # save intermediate results
 lSave : true
 # (list of) path(s) of to be predicted images
-lPredictImg : ["/med_data/ImageSimilarity/Databases/MRPhysics/..."] 
+lPredictImg : ["/media/wzehui/med_data/ImageSimilarity/Databases/MRPhysics/..."]
 # (list with) labels of to be predicted images (either scalar or path to patch-wise label file)
 lLabelPredictImg : [ 1 ]
 # sPredictModel: if empty, the best model in the selected database will be chosen.
@@ -130,20 +130,23 @@ correction:
   # training model
   sCorrection: "motion_VAE2D"
   # predict model
-  bestModel: "vae_weight_ps_80_bs_64_lr_0.0001_10_mar"
+  bestModel: "vae_weight_ps_80_bs_32_lr_0.0001_10_mar"
   # loss network for calculating perceptual loss
   pl_network: "vgg19"
   loss_model: ""
-  kl_weight: 1 # KL loss weight
+  kl_weight:  # KL loss weight
   tv_weight: 0 # TV loss weight
-  ge_weight: 10 # gradient entropy weight
-  perceptual_weight: 0.00001 # perceptual loss weight
+  ge_weight: 0 # gradient entropy weight
+  perceptual_weight: 0 # perceptual loss weight
   mse_weight: 0 # MSE loss weight
-  charbonnier_weight: 0.1 # Charbonnier loss weight
+  abs_weight: 0 # L1 loss weight
+  MSSIM_weight: 1000 # Mean-SSIM loss weight
+  MS_SSIM_weight: 0 # MS-SSIM loss weight
+  charbonnier_weight: 0 # Charbonnier loss weight
   loss_ref2ref: 0.4 # ref2ref weight
   loss_art2ref: 0.6 # art2ref weight
   unpatch: true
-  nScale: 255
+  nScale: 1 # 255
   # specify the actual size of the images when predicting
   # Head:[256, 196, 40]
   # Abdomen: sizes differ for different patients. e.g. Abdomen 01_ab: [256, 320, 30], Abdomen 06_hr: [192, 320, 30], Abdomen 17_ks: [260, 320, 30] 
